Fixed CodeBlock styling issue. overflow-scroll only on x

--- a/src/CodeBlock.css
+++ b/src/CodeBlock.css
@@ -18,7 +18,7 @@
     border-radius: 6px;
     border: 1px solid lightgrey;
 
-    overflow: scroll;
+    overflow-x: scroll;
     min-width: 100%;
 
     display: grid;
